--- a/style.css
+++ b/style.css
@@ -536,17 +536,18 @@ body {
     font-weight: lighter;
   }
   .coeur {
-    width: 35px;
-    height: 35px;
-    margin-top: -20px;
+    width: 50px;
+    height: 50px;
+    margin-top: -50px;
     position: relative;
-    font-size: 20px;
+    font-size: 25px;
     float: right;
   }
   .coeur i {
     position: absolute;
     top: 0;
     left: 0;
+    
   }
 
   .coeur .coeurvide {
@@ -554,19 +555,19 @@ body {
     justify-content: center;
     align-items: center;
     float: right;
-    padding-right: 5%;
     z-index: 1;
     color: gray; 
   }
   
   .coeur .coeurplein {
-    width: 35px;
-    height: 35px;
+    width: 50px;
+    height: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
     float: right;
-    padding: 0;
+    margin-top: -12px;
+    margin-left: -12px;
     z-index: 2;
     background: linear-gradient(120deg,#FF79DA 0%,#9356DC 100%);
     background-clip: border-box;
