--- a/style.css
+++ b/style.css
@@ -483,7 +483,7 @@ body {
     justify-content: center;
     flex-direction: column;
     margin: 20px;
-    
+    box-shadow: 5px 10px 30px #e3e3e3;
     
   }
 
