--- a/Starting website 2/style2.css
+++ b/Starting website 2/style2.css
@@ -45,6 +45,8 @@ a:hover {
 
 .bloc-lg {
     padding: 100px 50px;
+    display: flex;
+    justify-content: center;
 }
 
 .bloc-md {
@@ -90,7 +92,6 @@ a:hover {
 }
 
 .texture-paper::before {
-    background: url("img/texture-paper.png");
     background-size: 280px 280px;
 }
 
@@ -400,6 +401,11 @@ a:hover {
         float: none;
         margin: 10px auto 0;
     }
+
+    .navbar-toggle {
+        display: none;
+    }
+
 }
 
 .nav > li > .dropdown a {
@@ -474,6 +480,11 @@ button {
     box-shadow: 0 1px 3px rgba(0, 0, 1, .25), inset 0 1px 0 0 rgba(255, 255, 255, .15);
 }
 
+.col-sm-12  h2 {
+    margin-bottom: 40px;
+   
+}
+
 .icon-md {
     font-size: 30px!important;
 }
@@ -507,6 +518,16 @@ button {
 .form-control {
     border-color: rgba(0, 0, 0, .1);
     box-shadow: none;
+    display:flex ;
+    flex-direction: column;
+    height: 34px;
+    max-width: 500px;
+    width: 100%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    border-radius: 4px;
+    border: solid 2px rgba(0, 0, 0, .4);
+    box-shadow: 0 1px 3px rgb(0 0 1 / 25%), inset 0 1px 0 0 rgb(255 255 255 / 15%);
 }
 
 .scrollToTop {
@@ -651,10 +672,26 @@ a {
     font-family: "helvetica";
     font-weight: 400;
     color: #575757!important;
+    font-weight: 500;
+}
+
+.citation {
+    font-style: italic;
+    font-size: large;
+}
+
+.client {
+    font-size: 21px;
 }
 
 .container {
     max-width: 1000px;
+    
+}
+
+.label {
+    color: rgba(0, 0, 0, .4);
+    
 }
 
 .hero-bloc-text {
@@ -676,17 +713,28 @@ a {
 }
 
 p {
-    font-size: 11px;
+    font-size: 14px;
+    display: flex;
+    justify-content: center;
+}
+
+.col-sm-6 p {
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 1.5;
+    
 }
 
 .tight-width-whitespace {
     max-width: 600px;
     margin: auto auto auto auto;
+    color: #FFFFFF;
 }
 
 .h1 {
     font-size: 20px;
     font-family: "Open Sans";
+    
 }
 
 .cta-hero {
@@ -701,8 +749,10 @@ p {
 .social {
     max-width: 400px;
     margin: auto auto auto auto;
+    margin-top: 25px;
+    
 }
-
+ 
 h2 {
     font-size: 22px;
     line-height: 1.4em;
@@ -752,7 +802,7 @@ h4 {
 }
 
 .black-background {
-    background-color: rgba(165, 147, 99, 0.7);
+    background-color: #333333;
     padding: 40px 40px 40px 40px;
 }
 
@@ -770,16 +820,22 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #F3976C;
+    background-image: url("img/agence-la-panthere.webp");
 }
 
 .tc-white {
     color: #F3976C!important;
+    display: flex;
+    justify-content: center;
 }
 
 .btn-atomic-tangerine {
     background: #F3976C;
     color: #FFFFFF!important;
+    width: 100%;
+    border-radius: 4px;
+    border: none;
+    box-shadow: 0 1px 3px rgb(0 0 1 / 25%), inset 0 1px 0 0 rgb(255 255 255 / 15%);
 }
 
 .btn-atomic-tangerine:hover {
@@ -808,20 +864,12 @@ h4 {
     border-color: #364577!important;
 }
 
-.bg-dots-bg {
-    background-image: url("img/dots-bg.png");
-}
-
-.bg-lines-h2-bg {
-    background-image: url("img/lines-h2-bg.png");
-}
-
 .bg-banniere {
-    background-image: url("img/agence-la-panthere.jpg");
+    background-image: url("img/agence-la-panthere.webp");
 }
 
 .bg-presentation {
-    background-image: url("img/image-de-presentation.bmp");
+    background-image: url("img/image-de-presentation.webp");
 }
 
 @media (max-width: 1024px) {
